# pytorch-distributed

./: .gitignore  README.md  pyproject.toml
assignments/assignment0/: README.md  memory_analysis.py  pytorch_utils.py  throughput.py
assignments/assignment0/model/: my_gpt2.py
assignments/assignment1/: README.md  analyze_traces.ipynb  train_baseline.py  train_ddp.py  train_fsdp.py
assignments/assignment1/data/: data_loader.py
assignments/assignment1/train/: distributed_trainer.py
